scss/app.scss
$grid-breakpoints: (
  xs: 0,
  sm: 600px,
  md: 900px,
  lg: 1200px,
  xl: 1536px,
);

$standard-spacing: 8px;
$grid-gutter-width: 1.5rem;
$gutters: (
  0: 0,
  1: 1.2 * $standard-spacing,
  2: 2.2 * $standard-spacing,
  3: 2.8 * $standard-spacing,
  4: 3.2 * $standard-spacing,
  5: 4 * $standard-spacing,
);

@import "../node_modules/bootstrap/scss/bootstrap-grid.scss";

.wrapper {
  position: relative;
  width: 100%;
  height: auto;
  overflow-x: auto;
}

.wrapper::-webkit-scrollbar {
  height: 10px;
}

.wrapper::-webkit-scrollbar-thumb {
  border: solid 3px transparent;
  border-radius: 41px;
  background-image: linear-gradient(
      45deg,
      rgb(67, 95, 221) 0%,
      rgb(67, 95, 221) 22%,
      rgb(80, 115, 203) 22%,
      rgb(80, 115, 203) 48%,
      rgb(92, 135, 185) 48%,
      rgb(92, 135, 185) 73%,
      rgb(105, 156, 167) 73%,
      rgb(105, 156, 167) 77%,
      rgb(118, 176, 149) 77%,
      rgb(118, 176, 149) 87%,
      rgb(130, 196, 131) 87%,
      rgb(130, 196, 131) 89%,
      rgb(143, 216, 113) 89%,
      rgb(143, 216, 113) 100%
    ),
    linear-gradient(
      90deg,
      rgb(67, 95, 221) 0%,
      rgb(67, 95, 221) 22%,
      rgb(80, 115, 203) 22%,
      rgb(80, 115, 203) 48%,
      rgb(92, 135, 185) 48%,
      rgb(92, 135, 185) 73%,
      rgb(105, 156, 167) 73%,
      rgb(105, 156, 167) 77%,
      rgb(118, 176, 149) 77%,
      rgb(118, 176, 149) 87%,
      rgb(130, 196, 131) 87%,
      rgb(130, 196, 131) 89%,
      rgb(143, 216, 113) 89%,
      rgb(143, 216, 113) 100%
    ),
    linear-gradient(
      67.5deg,
      rgb(67, 95, 221) 0%,
      rgb(67, 95, 221) 22%,
      rgb(80, 115, 203) 22%,
      rgb(80, 115, 203) 48%,
      rgb(92, 135, 185) 48%,
      rgb(92, 135, 185) 73%,
      rgb(105, 156, 167) 73%,
      rgb(105, 156, 167) 77%,
      rgb(118, 176, 149) 77%,
      rgb(118, 176, 149) 87%,
      rgb(130, 196, 131) 87%,
      rgb(130, 196, 131) 89%,
      rgb(143, 216, 113) 89%,
      rgb(143, 216, 113) 100%
    ),
    linear-gradient(
      157.5deg,
      rgb(67, 95, 221) 0%,
      rgb(67, 95, 221) 22%,
      rgb(80, 115, 203) 22%,
      rgb(80, 115, 203) 48%,
      rgb(92, 135, 185) 48%,
      rgb(92, 135, 185) 73%,
      rgb(105, 156, 167) 73%,
      rgb(105, 156, 167) 77%,
      rgb(118, 176, 149) 77%,
      rgb(118, 176, 149) 87%,
      rgb(130, 196, 131) 87%,
      rgb(130, 196, 131) 89%,
      rgb(143, 216, 113) 89%,
      rgb(143, 216, 113) 100%
    ),
    linear-gradient(90deg, rgb(195, 223, 84), rgb(118, 43, 234)) !important;
  background-blend-mode: overlay, overlay, overlay, overlay, normal !important;
}

.wrapper.yelred::-webkit-scrollbar-thumb {
  background-image: linear-gradient(
    45deg,
    rgb(255, 231, 52),
    #ff4345
  ) !important;
}

.wrapper::-webkit-scrollbar-track {
  border-radius: 41px;
  background-color: transparent;
}

/* Firefox */
.wrapper {
  scrollbar-color: transparent
    linear-gradient(45deg, rgb(255, 231, 52), #ff4345);
}

/* Internet Explorer and Edge (Older versions) */
.wrapper,
html {
  scrollbar-base-color: #f1f1f1;
  scrollbar-arrow-color: #b92e2e;
  scrollbar-shadow-color: #f30b0b;
  scrollbar-face-color: #f1f1f1;
  scrollbar-highlight-color: #f1f1f1;
  scrollbar-darkshadow-color: #888;
}

